fixed h3 spacing on connections and potential connections on dashboard

--- a/client/src/components/ConnectionsCard/index.scss
+++ b/client/src/components/ConnectionsCard/index.scss
@@ -15,6 +15,10 @@ h3 {
     color: white;  
     font-family: 'Righteous', sans-serif;
     // font: Ubuntu;
-    margin-bottom: 0px;
+    margin-bottom: 0px !important;
    
 }
+
+// li {
+//     margin-top: 0px !important;
+// }
