--- a/client/src/styles/Chat.css
+++ b/client/src/styles/Chat.css
@@ -21,7 +21,7 @@
   background-color: #637f7d;
   box-shadow: 1px 1px 2px 2px black !important;
 }
-h3 {
+h4 {
   background-color: #db784d;
   color: white;
   font-family: "Righteous", sans-serif;
